--- a/packages/web-components/fast-ssr/package.json
+++ b/packages/web-components/fast-ssr/package.json
@@ -41,12 +41,12 @@
       "types": "./dist/dts/exports.d.ts",
       "default": "./dist/esm/exports.js"
     },
-    "./install-dom-shim": "./dist/esm/install-dom-shim.js",
+    "./install-dom-shim.js": "./dist/esm/install-dom-shim.js",
     "./dom-shim": {
       "types": "./dist/dts/dom-shim.d.ts",
       "default": "./dist/esm/dom-shim.js"
     },
-    "./request-storage": {
+    "./request-storage.js": {
       "types": "./dist/dts/request-storage.d.ts",
       "default": "./dist/esm/request-storage.js"
     },
