--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -112,9 +112,7 @@
     "@web/dev-server-import-maps": "0.1.1",
     "@web/test-runner": "0.17.0",
     "@web/test-runner-playwright": "0.10.1",
-    "@types/chai-spies": "1.0.3",
     "@types/mocha": "10.0.1",
-    "chai-spies": "1.0.0",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
     "mocha": "10.2.0",
@@ -123,6 +121,7 @@
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-terser": "^7.0.2",
     "@rollup/plugin-typescript": "^8.3.2",
+    "sinon": "~16.0.0",
     "tslib": "^2.4.0",
     "typescript": "^4.7.0"
   }
