--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "packages/web-components/fast-element",
     "packages/web-components/fast-router",
     "packages/web-components/fast-ssr",
+    "packages/web-components/fast-btr",
     "sites/site-utilities",
     "sites/website",
     "examples/todo-app",
